--- a/src/theme/index.less
+++ b/src/theme/index.less
@@ -1,4 +1,5 @@
 @text-color: #f2f2f2;
-@text-gray: #bfbfbf;
+@text-gray: #ababab;
 @theme-color: #57b560;
 @theme-bg: #1d1d1d;
+@theme-bg-gray: #282828;
