--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2848233 */
-  src: url('iconfont.woff2?t=1633358170966') format('woff2'),
-       url('iconfont.woff?t=1633358170966') format('woff'),
-       url('iconfont.ttf?t=1633358170966') format('truetype');
+  src: url('iconfont.woff2?t=1633423655306') format('woff2'),
+       url('iconfont.woff?t=1633423655306') format('woff'),
+       url('iconfont.ttf?t=1633423655306') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-love:before {
+  content: "\e665";
 }
 
 .icon-friendadd:before {
