--- a/src/theme/index.less
+++ b/src/theme/index.less
@@ -1,6 +1,7 @@
-@text-color: #f2f2f2;
-@text-gray: #ababab;
-@theme-color: #57b560;
-@theme-bg: #1d1d1d;
+@text-color: #243259;
+@text-gray: #9ba4b3;
+@text-light: #bdc5d7;
+@active-color: #254cda;
+@theme-bg: #f3f6fc;
 @theme-bg-gray: #282828;
 @theme-bg-dark: #111;
