清除无用样式

--- a/src/theme/index.less
+++ b/src/theme/index.less
@@ -2,6 +2,6 @@
 @text-gray: #9ba4b3;
 @text-light: #bdc5d7;
 @active-color: #254cda;
-@theme-bg: #f3f6fc;
+@theme-bg: #fcfcfe;
 @theme-bg-gray: #282828;
 @theme-bg-dark: #111;
