--- a/src/theme/index.less
+++ b/src/theme/index.less
@@ -1,7 +1,7 @@
-@text-dark: #243259;
+@text-dark: #24592d;
 @text-gray: #9ba4b3;
 @text-light: #bdc5d7;
-@active-color: #254cda;
+@active-color: #36ad6a;
 @theme-bg: #fcfcfe;
 @theme-bg-gray: #282828;
 @theme-bg-dark: #111;
