--- a/src/style/index.less
+++ b/src/style/index.less
@@ -19,10 +19,10 @@
       justify-content: space-between;
       margin: 0 auto;
       border-bottom: 1px solid gray;
-      @media (min-width: 768px) {
+      @media (min-width: 420px) {
         width: 60%;
       }
-      @media (max-width: 768px) {
+      @media (max-width: 420px) {
         width: 95%;
       }
       .title {
@@ -34,7 +34,7 @@
     }
     .message-container {
       display: block;
-      height: 70px;
+      height: 50px;
       .message {
         display: inline-block;
         margin: 15px;
@@ -52,15 +52,22 @@
         &__tile {
           display: inline-block;
           margin: 3px;
-          width: 60px;
-          height: 60px;
           border: 2px solid @border-color;
           border-radius: 3px;
           color: @text-color;
           vertical-align: top;
           font-weight: bold;
           font-size: 2.2rem;
-          line-height: 60px;
+          @media (min-width: 420px) {
+            width: 60px;
+            height: 60px;
+            line-height: 60px;
+          }
+          @media (max-width: 420px) {
+            width: 50px;
+            height: 50px;
+            line-height: 50px;
+          }
           &.filled {
             border: 2px solid @text-color;
             animation: bounce 0.2s;
@@ -100,11 +107,11 @@
           border: none;
           border-radius: 4px;
           font-weight: bold;
-          @media (min-width: 768px) {
+          @media (min-width: 420px) {
             margin: 0 4px;
             width: 43px;
           }
-          @media (max-width: 768px) {
+          @media (max-width: 420px) {
             margin: 0 2px;
             width: 32px;
           }
@@ -117,13 +124,13 @@
           }
         }
         &:last-child {
-          @media (min-width: 768px) {
+          @media (min-width: 420px) {
             :first-child,
             :last-child {
               width: 68px;
             }
           }
-          @media (max-width: 768px) {
+          @media (max-width: 420px) {
             :first-child,
             :last-child {
               width: 50px;
